--- a/MyPad/MyPad.csproj
+++ b/MyPad/MyPad.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <PackageReference Include="AvalonEdit" Version="6.0.1" />
     <PackageReference Include="CaseExtensions" Version="1.0.3" />
+    <PackageReference Include="DiffPlex.Wpf" Version="1.1.1" />
     <PackageReference Include="Dragablz" Version="0.0.3.203" />
     <PackageReference Include="GridExtra" Version="0.4.0" />
     <PackageReference Include="Hardcodet.NotifyIcon.Wpf.NetCore" Version="1.0.10" />
