--- a/MyPad/appsettings.json
+++ b/MyPad/appsettings.json
@@ -1,5 +1,7 @@
 {
   "temps_lifetime": 10,
   "large_size_border": 10485760,
-  "project_site": "https://github.com/kawasawa/MyPad.NetCore"
+  "project_site": "https://github.com/kawasawa/MyPad.NetCore",
+  "donation_site": "https://www.paypal.me/kawasawa",
+  "donation_amount":  300
 }
