--- a/MyPad/MyPad.csproj
+++ b/MyPad/MyPad.csproj
@@ -28,6 +28,7 @@
     <PackageReference Include="Dragablz" Version="0.0.3.203" />
     <PackageReference Include="GridExtra" Version="0.4.0" />
     <PackageReference Include="Hardcodet.NotifyIcon.Wpf.NetCore" Version="1.0.10" />
+    <PackageReference Include="LivetCask.Messaging" Version="3.2.2.2" />
     <PackageReference Include="MahApps.Metro" Version="2.0.1" />
     <PackageReference Include="MahApps.Metro.IconPacks.FontAwesome" Version="4.2.0" />
     <PackageReference Include="MahApps.Metro.IconPacks.Material" Version="4.2.0" />
