--- a/MyPad/MyPad.csproj
+++ b/MyPad/MyPad.csproj
@@ -33,6 +33,7 @@
     <PackageReference Include="MahApps.Metro.IconPacks.FontAwesome" Version="4.2.0" />
     <PackageReference Include="MahApps.Metro.IconPacks.Material" Version="4.2.0" />
     <PackageReference Include="MahApps.Metro.IconPacks.Modern" Version="4.2.0" />
+    <PackageReference Include="MethodDecorator.Fody" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.5" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Plow" Version="1.0.0-beta1" />
