--- a/MyPad/MyPad.csproj
+++ b/MyPad/MyPad.csproj
@@ -51,6 +51,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="Windows">
+      <HintPath>dll\Windows Kits\10\UnionMetadata\10.0.17763.0\Windows.winmd</HintPath>
+      <IsWinMDFile>true</IsWinMDFile>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
     <Resource Include="Resources\app.ico" />
   </ItemGroup>
 
