--- a/MyPad/MyPad.csproj
+++ b/MyPad/MyPad.csproj
@@ -34,6 +34,7 @@
     <PackageReference Include="MahApps.Metro.IconPacks.FontAwesome" Version="4.2.0" />
     <PackageReference Include="MahApps.Metro.IconPacks.Material" Version="4.2.0" />
     <PackageReference Include="MahApps.Metro.IconPacks.Modern" Version="4.2.0" />
+    <PackageReference Include="Markdig.Wpf" Version="0.3.1" />
     <PackageReference Include="MethodDecorator.Fody" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.5" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
@@ -99,6 +100,9 @@
   <ItemGroup>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="HISTORY.md">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
