[change] RuntimeIdentifier を設定

--- a/MyPad/MyPad.csproj
+++ b/MyPad/MyPad.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <RuntimeIdentifiers>win-x86</RuntimeIdentifiers>
     <LangVersion>8.0</LangVersion>
     <UseWPF>true</UseWPF>
     <ApplicationIcon>Resources\app.ico</ApplicationIcon>
