--- a/.github/workflows/dotnet-core-desktop.yml
+++ b/.github/workflows/dotnet-core-desktop.yml
@@ -18,36 +18,27 @@ jobs:
       Test_Project_Path: MyPad.Test\MyPad.Test.csproj
     
     runs-on: ${{ matrix.os }}
+    
     steps:
-
-    # Checkout the repository
     - name: Checkout
       uses: actions/checkout@v2
       with:
         fetch-depth: 0
 
-    # Install the .NET Core workload
     - name: Install .NET Core
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.x
 
-    # Add MSBuild to the PATH: https://github.com/microsoft/setup-msbuild
-    - name: Setup MSBuild.exe
-      uses: microsoft/setup-msbuild@2008f912f56e61277eefaac6d1888b750582aa16
-
-    # Execute all unit tests in the solution
     - name: Execute unit tests
       run: dotnet test $env:Test_Project_Path
     
-    # Build the project
     - name: Build the project
       run: dotnet build $env:Project_Path /p:Configuration=$env:Configuration
       env:
         Configuration: ${{ matrix.configuration }}
 
-    # Upload the artifact
-    - name: Upload build artifacts
+    - name: Upload the artifact
       uses: actions/upload-artifact@v2
       with:
         name: artifact
