--- a/MyPad/appsettings.json
+++ b/MyPad/appsettings.json
@@ -1,7 +1,8 @@
 {
-  "temps_lifetime": 10,
-  "large_size_border": 10485760,
   "project_site": "https://github.com/kawasawa/MyPad.NetCore",
-  "donation_site": "https://www.paypal.me/kawasawa",
-  "donation_amount":  300
+  "donation_site": "https://www.paypal.me/kawasawa/300",
+  "cache_lifetime": 10,
+  "toast_lifetime": 5,
+  "toast_max_count": 5,
+  "file_size_threshold": 10485760
 }
