--- a/MyPad/MyPad.csproj
+++ b/MyPad/MyPad.csproj
@@ -36,15 +36,13 @@
     <PackageReference Include="GridExtra" Version="0.4.0" />
     <PackageReference Include="Hardcodet.NotifyIcon.Wpf.NetCore" Version="1.0.14" />
     <PackageReference Include="LivetCask.Messaging" Version="3.2.3.1" />
-    <PackageReference Include="MahApps.Metro" Version="2.4.1" />
-    <PackageReference Include="MahApps.Metro.IconPacks.FontAwesome" Version="4.8.0" />
-    <PackageReference Include="MahApps.Metro.IconPacks.Material" Version="4.8.0" />
-    <PackageReference Include="MahApps.Metro.IconPacks.Modern" Version="4.8.0" />
+    <PackageReference Include="MahApps.Metro" Version="2.4.3" />
+    <PackageReference Include="MahApps.Metro.IconPacks" Version="4.8.0" />
     <PackageReference Include="Markdig.Wpf" Version="0.4.0" />
     <PackageReference Include="MethodDecorator.Fody" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="NLog" Version="4.7.5" />
+    <PackageReference Include="NLog" Version="4.7.6" />
     <PackageReference Include="Plow" Version="1.1.0" />
     <PackageReference Include="Plow.Wpf" Version="1.1.0" />
     <PackageReference Include="Prism.Unity" Version="8.0.0.1909" />
