[fix] リポジトリのリンクを修正

--- a/MyPad/appsettings.json
+++ b/MyPad/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "project_site": "https://github.com/kawasawa/MyPad.NetCore",
+  "project_site": "https://github.com/kawasawa/MyPad",
   "donation_site": "https://www.paypal.me/kawasawa/300",
   "cache_lifetime": 10,
   "toast_lifetime": 5,
