--- a/MyPad/MyPad.csproj
+++ b/MyPad/MyPad.csproj
@@ -147,7 +147,7 @@
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="del &quot;$(TargetDir)*.xml&quot;" />
+    <Exec Command="del &quot;$(TargetDir)*.xml&quot;&#xD;&#xA;rd /s /q &quot;$(TargetDir)cs&quot;&#xD;&#xA;rd /s /q &quot;$(TargetDir)de&quot;&#xD;&#xA;rd /s /q &quot;$(TargetDir)es&quot;&#xD;&#xA;rd /s /q &quot;$(TargetDir)fr&quot;&#xD;&#xA;rd /s /q &quot;$(TargetDir)it&quot;&#xD;&#xA;rd /s /q &quot;$(TargetDir)ja&quot;&#xD;&#xA;rd /s /q &quot;$(TargetDir)ko&quot;&#xD;&#xA;rd /s /q &quot;$(TargetDir)pl&quot;&#xD;&#xA;rd /s /q &quot;$(TargetDir)pt-BR&quot;&#xD;&#xA;rd /s /q &quot;$(TargetDir)ru&quot;&#xD;&#xA;rd /s /q &quot;$(TargetDir)tr&quot;&#xD;&#xA;rd /s /q &quot;$(TargetDir)zh-Hans&quot;&#xD;&#xA;rd /s /q &quot;$(TargetDir)zh-Hant&quot;" />
   </Target>
 
 </Project>
