[change] ターミナルのバッファサイズを設定ファイルに追加

--- a/MyPad/appsettings.json
+++ b/MyPad/appsettings.json
@@ -4,5 +4,6 @@
   "cache_lifetime": 10,
   "toast_lifetime": 5,
   "toast_max_count": 5,
-  "file_size_threshold": 10485760
+  "file_size_threshold": 10485760,
+  "terminal_buffer_size": 10000
 }
