[update] 作成者のホームページへのリンクを追加

--- a/MyPad/appsettings.json
+++ b/MyPad/appsettings.json
@@ -1,5 +1,6 @@
 {
   "project_site": "https://github.com/kawasawa/MyPad",
+  "creator_site": "https://kawasawa.github.io/",
   "donation_site": "https://www.paypal.me/kawasawa/300",
   "cache_lifetime": 10,
   "toast_lifetime": 5,
