--- a/MyPad/appsettings.json
+++ b/MyPad/appsettings.json
@@ -4,7 +4,7 @@
   "donation_site": "https://www.paypal.me/kawasawa/300",
   "cache_lifetime": 10,
   "toast_lifetime": 5,
-  "toast_max_count": 5,
-  "file_size_threshold": 10485760,
+  "toast_count_limit": 5,
+  "editor_file_size_threshold": 10485760,
   "terminal_buffer_size": 10000
 }
