--- a/MyPad/MyPad.csproj
+++ b/MyPad/MyPad.csproj
@@ -35,6 +35,7 @@
     <PackageReference Include="Dragablz" Version="0.0.3.223" />
     <PackageReference Include="GridExtra" Version="0.4.0" />
     <PackageReference Include="Hardcodet.NotifyIcon.Wpf.NetCore" Version="1.0.18" />
+    <PackageReference Include="LiveCharts.Wpf.Core" Version="0.9.8" />
     <PackageReference Include="LivetCask.Messaging" Version="3.2.3.2" />
     <PackageReference Include="MahApps.Metro" Version="2.4.3" />
     <PackageReference Include="MahApps.Metro.IconPacks" Version="4.8.0" />
@@ -90,6 +91,9 @@
     <Compile Update="Views\Dialogs\NotifyDialog.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Update="Views\Regions\MaintenanceContentView.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="Views\Regions\TerminalView.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -138,6 +142,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Update="Views\Dialogs\NotifyDialog.xaml">
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Update="Views\Regions\MaintenanceContentView.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
     </Page>
     <Page Update="Views\Regions\TerminalView.xaml">
