--- a/MyPad/appsettings.json
+++ b/MyPad/appsettings.json
@@ -5,6 +5,8 @@
   "cache_lifetime": 10,
   "toast_lifetime": 5,
   "toast_count_limit": 5,
+  "performance_check_interval": 2000,
+  "performance_graph_limit": 50,
   "editor_file_size_threshold": 10485760,
   "terminal_buffer_size": 10000
 }
