--- a/MyPad/MyPad.csproj
+++ b/MyPad/MyPad.csproj
@@ -43,10 +43,9 @@
     <PackageReference Include="MethodDecorator.Fody" Version="1.1.1" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="3.8.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
+    <PackageReference Include="MyBase" Version="0.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="NLog" Version="4.7.7" />
-    <PackageReference Include="Plow" Version="1.1.0" />
-    <PackageReference Include="Plow.Wpf" Version="1.1.0" />
     <PackageReference Include="Prism.Unity" Version="8.0.0.1909" />
     <PackageReference Include="QuickConverter" Version="1.2.5" />
     <PackageReference Include="ReactiveProperty" Version="7.7.0" />
