[refactor] プロパティ名の修正

--- a/MyPad/appsettings.json
+++ b/MyPad/appsettings.json
@@ -1,13 +1,13 @@
 {
   "project_site": "https://github.com/kawasawa/MyPad",
-  "creator_site": "https://kawasawa.github.io/",
+  "creator_site": "https://kawasawa.github.io",
   "donation_site": "https://www.paypal.me/kawasawa/300",
   "cache_lifetime": 10,
-  "toast_lifetime": 5,
+  "toast_duration": 5,
   "toast_count_limit": 5,
-  "pomodoro_max_interval": 180,
-  "performance_check_interval": 2000,
-  "performance_graph_limit": 50,
-  "editor_file_size_threshold": 10485760,
-  "terminal_buffer_size": 10000
+  "performance_count_limit": 50,
+  "performance_check_interval": 2,
+  "pomodoro_duration_limit": 180,
+  "terminal_line_limit": 10000,
+  "huge_size_threshold": 10485760
 }
