[update] UIサイズの変更機能を追加

--- a/MyPad/MyPad.csproj
+++ b/MyPad/MyPad.csproj
@@ -107,6 +107,10 @@
     <Page Update="Views\Regions\ShortcutKeysContentView.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
+    <Page Update="Views\Styles\Size\Large.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+      <SubType>Designer</SubType>
+    </Page>
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
