[refactor] スタイルのフォルダ構成とキーの命名規則を変更

--- a/MyPad/MyPad.csproj
+++ b/MyPad/MyPad.csproj
@@ -107,6 +107,9 @@
     <Page Update="Views\Regions\ShortcutKeysContentView.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
+    <Page Update="Views\Styles\Base\Override.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
     <Page Update="Views\Styles\Size\Large.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
