[update] UIサイズにMediumを追加

--- a/MyPad/MyPad.csproj
+++ b/MyPad/MyPad.csproj
@@ -113,6 +113,10 @@
     <Page Update="Views\Styles\Base\Override.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
+    <Page Update="Views\Styles\Size\Medium.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Update="Views\Styles\Size\Large.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
