[change] 過去の変更履歴をアーカイブへ移動

--- a/MyPad/MyPad.csproj
+++ b/MyPad/MyPad.csproj
@@ -89,6 +89,9 @@
     <None Update="docs\DISCLAIMER.md">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="docs\HISTORY_ARCHIVE.md">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="docs\HISTORY.md">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
