--- a/MyPad/MyPad.csproj
+++ b/MyPad/MyPad.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net6.0-windows10.0.17763.0</TargetFramework>
     <RuntimeIdentifiers>win-x86</RuntimeIdentifiers>
     <UseWPF>true</UseWPF>
+    <UseWindowsForms>true</UseWindowsForms>
     <Version>1.19.0</Version>
     <Authors>Kazuki Awasawa</Authors>
     <Copyright>© Kazuki Awasawa All Rights Reserved.</Copyright>
@@ -35,7 +36,6 @@
     <PackageReference Include="DiffPlex.Wpf" Version="1.3.1" />
     <PackageReference Include="Dragablz" Version="0.0.3.223" />
     <PackageReference Include="GridExtra" Version="0.4.0" />
-    <PackageReference Include="H.NotifyIcon.Wpf" Version="1.1.9" />
     <PackageReference Include="LiveCharts.Wpf.Core" Version="0.9.8" />
     <PackageReference Include="LivetCask.Messaging" Version="4.0.2" />
     <PackageReference Include="MahApps.Metro" Version="2.4.9" />
