[change] 64bit 版配布への対応

--- a/MyPad.Test/MyPad.Test.csproj
+++ b/MyPad.Test/MyPad.Test.csproj
@@ -8,6 +8,8 @@
     <Authors>Kazuki Awasawa</Authors>
 
     <Copyright>© Kazuki Awasawa All Rights Reserved.</Copyright>
+
+    <Platforms>AnyCPU;x86;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
